# display

./: .gitignore  CMakeLists.txt  Makefile  Makefile.fonts  README.md  fonts.yaml  idf_component.yml
.github/workflows/: release.yaml
examples/animation/: CMakeLists.txt  pytest_test_animation.py
examples/animation/main/: idf_component.yml  main.cpp
examples/minimal/: CMakeLists.txt  dependencies.lock.license  pytest_test_minimal.py
examples/minimal/main/: idf_component.yml  main.cpp
include/: Display.hpp  Driver.hpp  Font.hpp
src/: Bitmap.cpp  Circle.cpp  Display.cpp  Driver.cpp  Font.cpp  Line.cpp  Rectangle.cpp
src/drivers/: SERIAL_128x128_DRIVER.cpp  SERIAL_64x64_DRIVER.cpp  SSD1327_128X128_SPI_DRIVER.cpp
test/: CMakeLists.txt  test_basic.cpp
test_app/: CMakeLists.txt
tools/: generate_fonts.py
